Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Suite__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This lookup relates to the Copado Change Management test scripts that are related to User Stories.</inlineHelpText>
    <label>Test Script</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Selenium Test Suites</relationshipLabel>
    <relationshipName>SeleniumTestSuites</relationshipName>
    <type>Lookup</type>
</CustomField>